// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renderForm should match snapshot 1`] = `
<div>
  <Form
    data-test="login-form"
  >
    <Input
      dataTest="login-email"
      id="email"
      labelText="Email"
      name="email"
      placeholder="name@address.com"
      type="email"
    />
    <Input
      dataTest="login-password"
      id="password"
      labelText="Password"
      name="password"
      placeholder="Enter your password"
      type="password"
    />
    <Level>
      <Button
        disabled={true}
        loading={true}
        type="submit"
        variant="primary"
      >
        Login
      </Button>
    </Level>
  </Form>
</div>
`;

exports[`Login renderForm should match snapshot 2`] = `
<div>
  <Form
    data-test="login-form"
  >
    <Input
      dataTest="login-email"
      id="email"
      labelText="Email"
      name="email"
      placeholder="name@address.com"
      type="email"
    />
    <Input
      dataTest="login-password"
      id="password"
      labelText="Password"
      name="password"
      placeholder="Enter your password"
      type="password"
    />
    <Level>
      <Button
        disabled={false}
        loading={false}
        type="submit"
        variant="primary"
      >
        Login
      </Button>
    </Level>
    <Alert
      message="Login failed, user credentials not recognised"
      type="danger"
    />
  </Form>
</div>
`;

exports[`Login should match a snapshot 1`] = `
<div>
  <div
    className="undefined false"
  >
    <H1
      isCentered={true}
    >
      Sign in
    </H1>
    <p
      className="pb-8"
    >
      Welcome to GEO Diary
    </p>
    <Formik
      enableReinitialize={false}
      initialValues={
        Object {
          "email": "",
          "password": "",
        }
      }
      isInitialValid={false}
      onSubmit={[Function]}
      render={[Function]}
      validate={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
    />
  </div>
  <div>
    <img
      alt="Reapit Graphic"
      src=""
    />
  </div>
</div>
`;

exports[`Login should match a snapshot 2`] = `
<Redirect
  to="/"
/>
`;
